Small Issue Fixed
Resolve Small Ui Issue and improve design.

--- a/src/scss/1.abstract/_variable.scss
+++ b/src/scss/1.abstract/_variable.scss
@@ -8,6 +8,7 @@ $color-5:#5550FF;
 $color-6:#4A4A4A;
 $color-7:#f15a24;
 $color-8:#7F7F7F;
-
+$color-9:#120E38;
+$color-10:#e3e3e3;
 
 $color-white:#FFFFFF;
