--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@
 @import './3.component/AnnouncementsItem';
 @import './3.component/button';
 @import './3.component/mainheader';
-
+@import './3.component/roundcornerCard';
 
 
 @import './5.pages/home';
