--- a/src/scss/3.component/_RecentArticleCard.scss
+++ b/src/scss/3.component/_RecentArticleCard.scss
@@ -1,7 +1,5 @@
 .recent_activity_article_item {
-  border-radius: $border-radius;
   min-height: 18rem;
-  box-shadow: 0px 3px 6px rgba(0,0,0,0.11);
   width: 100%;
 
   .ant-card-body {
@@ -32,7 +30,7 @@
     &-iconbox{
       width: 6rem;
       height: 6rem;
-      box-shadow: 0px 3px 6px rgba(0,0,0,0.11);
+      box-shadow: 0px 3px 6px $color-10;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -43,6 +41,7 @@
   &_footer {
     display: flex;
     align-items: center;
+    margin-top: 1rem;
 
     &_readerContainer {
       width: 75%;
@@ -55,7 +54,6 @@
         align-items: center;
         justify-content: center;
         border-radius: 2rem;
-        margin-top: .8rem;
         color: $color-1;
 
         &-text{
