--- a/src/scss/3.component/_mainHeader.scss
+++ b/src/scss/3.component/_mainHeader.scss
@@ -1,4 +1,10 @@
 .mainheader {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+
   &_container {
     backdrop-filter: blur(2px);
     padding: 2rem 6rem 0px;
@@ -38,19 +44,18 @@
         justify-content: center;
 
         &_items {
-
-          &-title{
-              color: $color-6;
-              font-weight: 600;
+          &-title {
+            color: $color-6;
+            font-weight: 600;
           }
 
-          &-link{
-              color: $color-8;
+          &-link {
+            color: $color-8;
           }
 
-          &-viewall{
-              color: $color-5 !important;
-              font-weight: 600;
+          &-viewall {
+            color: $color-5 !important;
+            font-weight: 600;
           }
 
           &-item {
@@ -59,7 +64,7 @@
 
             .ant-dropdown-menu-item:hover,
             .ant-dropdown-menu-submenu-title:hover {
-                background: none;
+              background: none;
             }
           }
         }
@@ -82,15 +87,92 @@
           }
         }
       }
+
+      &_userContainer {
+        width: 10rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &-user {
+          width: 1.8rem;
+          height: 1.8rem;
+          border: 1px solid $color-white;
+          padding: 2rem;
+          border-radius: 2rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: rgb(255, 255, 255);
+          margin-left: 3rem;
+        }
+      }
+    }
+
+    &-icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 2rem;
+    }
+
+    &_title {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 2rem;
+
+      &-text {
+        color: $color-white !important;
+      }
+    }
+
+    &_searchcontainer {
+      margin-bottom: 6rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &_inputBox {
+        width: 35%;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &-input {
+          padding: 1.2rem 8rem 1.2rem 1.5rem;
+          border-radius: 3rem;
+        }
+      }
+
+      &_actionBox {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        right: 1.5rem;
+        color: $color-9;
+
+        &-search {
+          width: 3.5rem;
+          height: 3.5rem;
+          background-color: $color-9;
+          border-radius: 2rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-left: 1rem;
+          color: $color-white;
+        }
+      }
     }
   }
   &_searchlist_container {
-    border-radius: 1rem;
-    position: absolute;
     width: 95%;
-    top: 100%;
+    top: 90%;
     margin-top: 1rem;
-    box-shadow: 0px 3px 6px #00000029;
+    position: absolute;
+    z-index: 999;
 
     .ant-card-body {
       padding: 1rem 2rem;
@@ -105,6 +187,14 @@
         flex: 1;
         margin-left: 1rem;
         display: inline-block;
+      }
+
+      &-clock {
+        color: $color-2;
+      }
+
+      &-trash{
+        color: $color-2;
       }
     }
   }
