--- a/src/scss/5.pages/_home.scss
+++ b/src/scss/5.pages/_home.scss
@@ -7,9 +7,9 @@
 }
 
 .main-container {
-  display: flex;
-  flex: auto;
-  flex-direction: column;
+  // display: flex;
+  // flex: auto;
+  // flex-direction: column;
   min-height: 100%;
   background: #f0f2f5;
 }
