--- a/src/scss/5.pages/_home.scss
+++ b/src/scss/5.pages/_home.scss
@@ -27,7 +27,9 @@
   background-color: $color-9;
   margin-top: 5rem;
   padding: 2.2rem 6rem !important;
-
+  display: flex;
+  justify-content: space-between;
+  
   &_text_container {
       margin: 0 6rem;
       &-text {
