--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -675,6 +675,12 @@ html {
   background-color: #120E38;
   margin-top: 5rem;
   padding: 2.2rem 6rem !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .footer_text_container {
