--- a/src/scss/5.pages/_home.scss
+++ b/src/scss/5.pages/_home.scss
@@ -3,7 +3,7 @@
 }
 
 .site-layout-background {
-  padding: 2rem 6rem 0 6rem;
+  padding: 2rem 6rem 8rem 6rem;
 }
 
 .main-container {
@@ -12,6 +12,7 @@
   // flex-direction: column;
   min-height: 100%;
   background: #f0f2f5;
+  position: relative;
 }
 
 .recent_articles_container {
@@ -29,6 +30,9 @@
   padding: 2.2rem 6rem !important;
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
   
   &_text_container {
       margin: 0 6rem;
