search-result-page-card-change
-worked on search result middle part

--- a/src/scss/1.abstract/_variable.scss
+++ b/src/scss/1.abstract/_variable.scss
@@ -10,5 +10,8 @@ $color-7:#f15a24;
 $color-8:#7F7F7F;
 $color-9:#120E38;
 $color-10:#e3e3e3;
+$color-11:#F5F5F5;
+$color-12:#999999;
+
 
 $color-white:#FFFFFF;
