--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,6 @@
 @import './3.component/button';
 @import './3.component/mainheader';
 @import './3.component/roundcornerCard';
-
+@import './3.component/SearchResult';
 
 @import './5.pages/home';
