--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,15 +1,14 @@
-@import './1.abstract/variable';
+@import "./1.abstract/variable";
 
-@import './2.base/base';
+@import "./2.base/base";
 
+@import "./3.component/RecentArticleCard";
+@import "./3.component/TitleText";
+@import "./3.component/PopularTopicsCard";
+@import "./3.component/AnnouncementsItem";
+@import "./3.component/button";
+@import "./3.component/mainHeader";
+@import "./3.component/roundcornerCard";
+@import "./3.component/collapsibleFilter";
 
-@import './3.component/RecentArticleCard';
-@import './3.component/TitleText';
-@import './3.component/PopularTopicsCard';
-@import './3.component/AnnouncementsItem';
-@import './3.component/button';
-@import './3.component/mainheader';
-@import './3.component/roundcornerCard';
-
-
-@import './5.pages/home';
+@import "./5.pages/home";
