--- a/src/scss/3.component/_SearchResult.scss
+++ b/src/scss/3.component/_SearchResult.scss
@@ -18,6 +18,10 @@
     padding: 1.2rem 1.5rem;
     align-items: center;
 
+    &.quickLinks {
+      padding: 1.2rem 2.5rem;
+    }
+
     &_icons {
       display: flex;
       margin-right: 1rem;
