--- a/src/scss/3.component/_collapsibleFilter.scss
+++ b/src/scss/3.component/_collapsibleFilter.scss
@@ -1,38 +1,79 @@
-.collapsibleFilter {
+.filters {
+  .ant-collapse {
+    border-radius: 1rem;
+    background-color: $color-white;
+    border: none !important;
+    box-shadow: 0px 3px 6px $color-10;
+  }
+
+  .ant-collapse-content {
+    border-radius: 0 0 1rem 1rem !important;
+    border-top: 0.2rem solid $color-1 !important;
+  }
+
+  .ant-collapse-item {
+    border: none !important;
+    border-radius: 1rem !important;
+  }
+
+  .ant-collapse-header {
+    border-radius: 1rem 1rem 0 0 !important;
+  }
+
   &_container {
-    .ant-collapse-header {
-      border-bottom: 2px solid #2e3097;
-    }
-    &_panel {
+    &_header {
       display: flex;
       align-items: center;
+
       &-text {
         margin-left: 0.5rem;
       }
     }
-    &_filters {
-      .ant-collapse {
-        border: none;
+  }
+}
+
+.filter {
+  margin-bottom: 1rem;
+
+  &-headertext {
+    font-weight: 600;
+  }
+
+  &_lists {
+    margin-top: 1rem;
+
+    &_item {
+      margin-bottom: 0.5rem;
+      display: flex;
+      justify-content: space-between;
+
+      .ant-checkbox-inner {
+        width: 2rem;
+        height: 2rem;
+        border-radius: 0.3rem;
       }
-      .ant-collapse-item {
-        border: none;
+
+      .ant-checkbox-checked .ant-checkbox-inner {
+        background-color: $color-5;
+        border-color: $color-5;
       }
-      .ant-collapse-content-active {
-        border: none;
+
+      .ant-checkbox {
+        top: 0.4rem;
       }
-      .ant-collapse-header {
-        height: 34px;
-        display: flex !important;
-        align-items: center !important;
-        border: none;
+
+      .ant-checkbox + span{
+       color: $color-8;
       }
-      .ant-collapse-content-box {
-        padding: 12px;
+
+      .ant-checkbox-inner::after {
+        left: 25%;
       }
-      &_source {
-        &_panel {
-          border: none;
-        }
+
+      .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+      .ant-checkbox:hover .ant-checkbox-inner,
+      .ant-checkbox-input:focus + .ant-checkbox-inner {
+        border-color: $color-5;
       }
     }
   }
