Right pane quick links part2 completed

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,4 +11,7 @@
 @import "./3.component/roundcornerCard";
 @import "./3.component/collapsibleFilter";
 @import "./3.component/SearchResult";
+@import "./3.component/TechnologyTags";
+
+
 @import "./5.pages/home";
