--- a/src/scss/3.component/_SearchResult.scss
+++ b/src/scss/3.component/_SearchResult.scss
@@ -54,6 +54,13 @@
   &_body {
     padding: 1.2rem 1.5rem;
 
+    &_tagcontainer {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      margin-top: 1rem;
+    }
+
     &_othercontainer {
       display: flex;
       justify-content: space-between;
