--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -815,6 +815,18 @@ html {
   padding: 1.2rem 1.5rem;
 }
 
+.search_result_body_tagcontainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 1rem;
+}
+
 .search_result_body_othercontainer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -906,6 +918,13 @@ html {
 
 .search_result_body_contentcontainer-link {
   color: #5550FF !important;
+}
+
+.tag-text {
+  font-size: 1.2rem !important;
+  border: 1px solid black;
+  padding: 1rem;
+  margin: 0.5rem !important;
 }
 
 .ant-layout {
