apply initial setup redux

--- a/src/scss/3.component/_SearchResult.scss
+++ b/src/scss/3.component/_SearchResult.scss
@@ -54,6 +54,11 @@
   &_body {
     padding: 1.2rem 1.5rem;
 
+    &.scrollable{
+      overflow-y: auto;
+      max-height: 25rem;
+    }
+
     &_tagcontainer {
       display: flex;
       align-items: center;
