--- a/src/scss/3.component/_TitleText.scss
+++ b/src/scss/3.component/_TitleText.scss
@@ -1,4 +1,5 @@
 .title-text{
-    color: #4A4A4A !important;
+    color: $color-8 !important;
     margin: 1.5rem 1rem;
+    border-radius: 0.5rem;
 }
