--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./3.component/collapsibleFilter";
 @import "./3.component/SearchResult";
 @import "./3.component/TechnologyTags";
+@import "./3.component/CaseStudySection";
 
 
 @import "./5.pages/home";
