--- a/src/scss/3.component/_collapsibleFilter.scss
+++ b/src/scss/3.component/_collapsibleFilter.scss
@@ -10,6 +10,7 @@
         margin-left: 0.5rem;
       }
     }
+
     &_filters {
       .ant-collapse {
         border: none;
@@ -34,6 +35,26 @@
           border: none;
         }
       }
+    }
+  }
+  &_page {
+    &_container {
+      .react-pdf__Page {
+        margin-top: 10px;
+      }
+      .react-pdf__Page__textContent {
+        border: 1px solid darkgrey;
+        box-shadow: 5px 5px 5px 1px #ccc;
+        border-radius: 5px;
+      }
+
+      .react-pdf__Page__canvas {
+        margin: 0 auto;
+      }
+
+      height: 100%;
+      max-height: 500px;
+      overflow: auto;
     }
   }
 }
