--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -704,6 +704,27 @@ html {
   border: none;
 }
 
+.collapsibleFilter_page_container {
+  height: 100%;
+  max-height: 500px;
+  overflow: auto;
+}
+
+.collapsibleFilter_page_container .react-pdf__Page {
+  margin-top: 10px;
+}
+
+.collapsibleFilter_page_container .react-pdf__Page__textContent {
+  border: 1px solid darkgrey;
+  -webkit-box-shadow: 5px 5px 5px 1px #ccc;
+          box-shadow: 5px 5px 5px 1px #ccc;
+  border-radius: 5px;
+}
+
+.collapsibleFilter_page_container .react-pdf__Page__canvas {
+  margin: 0 auto;
+}
+
 .ant-layout {
   background-color: #f4f4f4;
 }
