setup code with redux
-remove all all props chaining
-create specific actions for events and handle it via reducer.

--- a/src/scss/3.component/_SearchResult.scss
+++ b/src/scss/3.component/_SearchResult.scss
@@ -126,6 +126,7 @@
       padding: 1rem;
       background-color: $color-11;
       border-radius: 1rem;
+      font-size: 1.5rem;
 
       &-text {
         color: $color-12;
