--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -870,6 +870,26 @@ html {
   font-weight: 600;
 }
 
+.search_result_header_pdfModal .ant-modal-body {
+  overflow: auto;
+  max-height: 80vh;
+}
+
+.search_result_header_pdfModal .react-pdf__Page__textContent {
+  border: 1px solid darkgrey;
+  -webkit-box-shadow: 5px 5px 5px 1px #ccc;
+          box-shadow: 5px 5px 5px 1px #ccc;
+  border-radius: 0.5rem;
+}
+
+.search_result_header_pdfModal .react-pdf__Page__annotations.annotationLayer {
+  padding: 1rem;
+}
+
+.search_result_header_pdfModal .react-pdf__Page__canvas {
+  margin: 0 auto;
+}
+
 .search_result_body {
   padding: 1.2rem 1.5rem;
 }
@@ -1020,7 +1040,6 @@ html {
   padding: 1rem 0;
 }
 
-<<<<<<< Updated upstream
 .caseStudyResult .ant-card-body {
   padding: 0;
 }
@@ -1095,8 +1114,6 @@ html {
   color: #5550FF !important;
 }
 
-=======
->>>>>>> Stashed changes
 .ant-layout {
   background-color: #f4f4f4;
 }
